Testes para Contexto

--- a/config.json
+++ b/config.json
@@ -2,5 +2,9 @@
     "/home/jmoreno/Documents/Projetos/Python/QxCoder-ES/exemplo/teste.c": {
         "linha": 0,
         "coluna": 0
+    },
+    "/home/jmoreno/Documents/Projetos/Python/QxCoder-ES/c": {
+        "linha": 0,
+        "coluna": 0
     }
 }
