--- a/config.json
+++ b/config.json
@@ -1,3 +1,6 @@
 {
-
+    "/home/jmoreno/Documents/Projetos/Python/QxCoder-ES/exemplo/teste.c": {
+        "linha": 0,
+        "coluna": -1
+    }
 }
