--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - 3.8
 before_install:
-  - source ./env/bin/activate
+  - bash -c "source env/bin/activate"
 env: PATH=./env/bin:$PATH
 install:
   - pip install -r requirements.txt 
