--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 install:
   - pip install -r requirements.txt 
 script:
-- "python3 testes.py"
+- "python3 -m pytest"
 after_success:
   - codecov # submit coverage
