Pastas de cobertura modificadas

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 # pytest.ini
 [pytest]
-addopts = -ra -v --cov=./teste
+addopts = -ra -v --cov=./teste --cov=./classes/model --cov=./classes/controller
 python_classes = T*
 python_files = T*.py
